# Vaccine-Cold-Chain-OpenEnv

metaHackathon/: Dockerfile  README.md  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml
metaHackathon/baseline/: inference.py
metaHackathon/server/: app.py  coldchain_env.py
server/: coldchain_env.py
